OpenShift/lab-10/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-from-nginx
  namespace: default  # Change to your namespace if it's different
spec:
  podSelector:
    matchLabels:
      app: static-website
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: static-website
    ports:
    - protocol: TCP
      port: 80
